# logic-mesh

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh  build.rs
.cargo/: config.toml
.github/: main.yml
.github/workflows/: cargo-publish.yml  demo-site.yml  main.yml  npm-publish.yml  publish.yml
block_macro/: Cargo.toml  README.md
block_macro/src/: block.rs  block_props.rs  lib.rs  utils.rs
pkg/: .npmrc
src/: lib.rs  main.rs
src/base/: block.rs  engine_messages.rs  input.rs  link.rs  mod.rs  output.rs
src/base/block/: connect.rs  desc.rs  mock.rs  mod.rs  props.rs
src/base/block/test_utils/: mock.rs  mod.rs
src/base/engine/: messages.rs  mod.rs
src/base/input/: base.rs  input_reader.rs  mod.rs  props.rs
src/base/link/: base.rs  mod.rs
src/base/output/: base.rs  mod.rs  props.rs
src/base/program/: data.rs  mod.rs
src/blocks/: maths.rs  misc.rs  mod.rs  registry.rs  utils.rs
src/blocks/bitwise/: bitwise_and.rs  bitwise_not.rs  bitwise_or.rs  bitwise_xor.rs  common.rs  mod.rs  utils.rs
src/blocks/collections/: dict.rs  get.rs  keys.rs  len.rs  list.rs  mod.rs  values.rs
src/blocks/control/: clamp.rs  deadband.rs  lead_lag.rs  mod.rs  pid.rs  priority_array.rs  reset.rs  sequencer.rs  trim_respond.rs
src/blocks/logic/: and.rs  binary.rs  eq.rs  flip_flop.rs  gt.rs  gte.rs  latch.rs  lt.rs  lte.rs  mod.rs  neq.rs  not.rs  or.rs  trigger.rs  util.rs  xor.rs
src/blocks/math/: abs.rs  add.rs  arccos.rs  arcsin.rs  arctan.rs  average.rs  cos.rs  div.rs  even.rs  exp.rs  log10.rs  logn.rs  max.rs  median.rs  min.rs  mod.rs  modulus.rs  mul.rs  neg.rs  odd.rs  pow.rs  sin.rs  sqrt.rs  sub.rs  tan.rs
src/blocks/misc/: change_of_value.rs  derivative.rs  ema.rs  has_value.rs  integrator.rs  mod.rs  moving_average.rs  parse_bool.rs  parse_number.rs  random.rs  sample_hold.rs  sinewave.rs
src/blocks/psych/: dewpoint.rs  enthalpy.rs  mod.rs
src/blocks/string/: concat.rs  len.rs  mod.rs  replace.rs
src/blocks/time/: calendar.rs  mod.rs  now.rs  schedule.rs
src/blocks/timers/: cycle_count.rs  mod.rs  off_delay.rs  on_delay.rs  one_shot.rs  rate_limit.rs  runtime.rs
src/tokio_impl/: block.rs  decorator.rs  engine.rs  input.rs  mod.rs  output.rs  sinewave_block.rs  sleep.rs  test_add_block.rs  test_block.rs
src/tokio_impl/engine/: block_pointer.rs  message_dispatch.rs  mod.rs  multi_threaded.rs  single_threaded.rs
src/tokio_impl/engine/multi_threaded/: engine.rs  messages.rs
src/wasm/: api.rs  engine.rs  engine_command.rs  js_block.rs  mod.rs  sleep.rs  types.rs
web/: .gitignore  .prettierrc  README.md  build.sh  components.json  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/app/: package.json
web/app/src/: app.css
web/app/src/components/: BlockCommons.svelte  BlockNode.svelte  ToolBar.svelte
web/app/src/components/blocks/: ButtonBlock.svelte  ChartBlock.svelte  CheckboxBlock.svelte  ComboBoxBlock.svelte  GaugeBlock.svelte  GenericBlock.svelte  InputBlock.svelte  LabelBlock.svelte  SliderBlock.svelte  TableBlock.svelte
web/app/src/lib/: Block.ts  Engine.ts  Examples.ts  JsBlocks.ts  Program.ts  model.svelte.ts  utils.ts
web/app/src/lib/components/ui/accordion/: accordion.svelte
web/app/src/lib/components/ui/checkbox/: checkbox.svelte
web/app/src/lib/components/ui/select/: select-item.svelte  select-scroll-down-button.svelte  select-trigger.svelte
web/app/src/routes/: +page.svelte
web/module/: README.md  index.d.ts  index.js  package.json
web/src/: App.vue  main.ts
web/src/assets/: js-block.css
web/src/components/: BlockCommons.svelte  BlockCommons.vue  BlockList.svelte  BlockList.vue  BlockNode.vue  ToolBar.vue
web/src/components/blocks/: BlockTemplate.vue  ChartBlock.vue  CheckboxBlock.svelte  CheckboxBlock.vue  GaugeBlock.vue  GenericBlock.svelte  GenericBlock.vue  InputBlock.vue
web/src/lib/: Block.ts  Engine.ts  Examples.ts  JsBlocks.ts  Model.ts  Program.ts
web/src/lib/components/ui/accordion/: accordion-trigger.svelte
web/src/lib/components/ui/select/: select-scroll-up-button.svelte  select.svelte
web/src/lib/components/ui/sonner/: index.ts
web/src/model/: BlockNodesModel.ts
web/src/routes/: +layout.svelte  +page.svelte
web/test/: TypedBlock.test.ts
