[package]
name = "logic-mesh"
version = "0.1.0"
edition = "2021"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
description = "Control logic engine using event based and reactive blocks written in Rust."
repository = "https://github.com/rracariu/logic-mesh"
keywords = ["logic", "control", "reactive", "wasm", "low-code"]
categories = ["asynchronous", "wasm"]
license = "BSD-3-Clause"

[workspace]
members = ["block_macro"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic_mesh_block_macro = { path = "block_macro", version = "0.1.0" }
serde = { version = "^1.0", features = ["derive"] }
libhaystack = {version = "^1.0.11", default-features = false, features = ["value", "zinc", "json"]}
uuid = {version = "^1.3.4", features = ["v4"]}
lazy_static = "^1.4.0"
futures = "^0.3.28"
rand = "^0.8.5"
anyhow = "^1.0.71"
log = "0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "^1.28.2", features = ["rt-multi-thread", "sync", "time", "macros"]}

[features]
default = ["console_error_panic_hook"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = {version = "^1.28.2", features = ["rt", "sync", "time", "macros"]}
wasm-bindgen = {version = "^0.2.87", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.5.0"
js-sys = "0.3.64"
web-sys = {version = "0.3.64", features = ["Window"]}
wasm-bindgen-futures = "^0.4.37"
wasm-bindgen-console-logger = "0.1.1"

console_error_panic_hook = { version = "^0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3.37"

[profile.release]
#debug = true
opt-level = "s"
lto = "on"
strip = "symbols"
