[package]
name = "logic-mesh"
version = "0.1.10"
edition = "2021"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
description = "Control logic engine using event based and reactive blocks written in Rust."
repository = "https://github.com/rracariu/logic-mesh"
keywords = ["logic", "control", "reactive", "wasm", "low-code"]
categories = ["asynchronous", "wasm"]
license = "BSD-3-Clause"

[workspace]
members = ["block_macro"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic_mesh_block_macro = { path = "block_macro", version = "^0.1.5" }
serde = { version = "^1.0", features = ["derive"] }
libhaystack = { version = "^1.0.13", default-features = false, features = [
	"value",
	"zinc",
	"json",
] }
uuid = { version = "^1.6", features = ["v4"] }
lazy_static = "^1.4.0"
futures = "^0.3.29"
rand = "^0.8.5"
anyhow = "^1.0.75"
log = "0.4.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.34.0", features = [
	"rt-multi-thread",
	"sync",
	"time",
	"macros",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "^1.34.0", features = ["rt", "sync", "time", "macros"] }
wasm-bindgen = { version = "^0.2.88", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.6.1"
js-sys = "^0.3.65"
wasm-bindgen-futures = "^0.4.38"
wasm-bindgen-console-logger = "^0.1.1"
console_error_panic_hook = "^0.1.7"

[dev-dependencies]
wasm-bindgen-test = "^0.3.38"

[profile.release]
#debug = true
opt-level = "s"
lto = "fat"
strip = "symbols"
