[package]
name = "logic-mesh"
version = "0.2.0"
edition = "2024"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
description = "Control logic engine using event based and reactive blocks written in Rust."
repository = "https://github.com/rracariu/logic-mesh"
keywords = ["logic", "control", "reactive", "wasm", "low-code"]
categories = ["asynchronous", "wasm"]
license = "BSD-3-Clause"

[workspace]
members = ["block_macro"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logic_mesh_block_macro = { path = "block_macro", version = "^0.1.6" }
serde = { version = "^1.0", features = ["derive"] }
libhaystack = { version = "^2.0.4", default-features = false, features = [
	"value",
	"zinc",
	"json",
] }
uuid = { version = "^1.20", features = ["v4"] }
futures = "^0.3"
rand = "^0.9"
anyhow = "^1.0"
log = "^0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.49", features = [
	"rt-multi-thread",
	"sync",
	"time",
	"macros",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "^1.49", features = ["rt", "sync", "time", "macros"] }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.6"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
wasm-bindgen-console-logger = "^0.1"
console_error_panic_hook = "^0.1"
getrandom = { version = "^0.3", default-features = false, features = [
	"wasm_js",
] }

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[profile.release]
#debug = true
opt-level = "s"
lto = "fat"
strip = "symbols"
