[package]
name = "block_macro"
version = "0.1.0"
edition = "2021"
description = "Macros for easy defining of block."
license = "BSD-3-Clause"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
litrs = "0.3.0"
proc-macro2 = "1.0.51"