[package]
name = "logic_mesh_block_macro"
version = "0.1.3"
edition = "2021"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
repository = "https://github.com/rracariu/logic-mesh"
description = "Macros for easy defining of block."
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
litrs = "0.3.0"
proc-macro2 = "1.0.51"